--- a/data/frontend/firmware.html
+++ b/data/frontend/firmware.html
@@ -65,6 +65,6 @@
     <script type="text/javascript">
         loadNavigation();
 
-        _("upload_form").addEventListener("onsubmit",startUpdate);
+        _("upload_form").addEventListener('submit',startUpdate);
     </script>
 </body>
