--- a/data/frontend/wifi.html
+++ b/data/frontend/wifi.html
@@ -88,7 +88,7 @@
     <script type="text/javascript">        
         loadWifiConfig();
 
-        _("wifi-form").addEventListener("onsubmit", sendWifiConfig);
+        _("wifi-form").addEventListener('submit', sendWifiConfig);
 
         async function loadWifiConfig()
         {
