--- a/data/frontend/wifi.html
+++ b/data/frontend/wifi.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Set WiFi Credentials</title>
     <link rel="stylesheet" href="frontend/css/bootstrap.min.css">
+    <link rel="stylesheet" href="frontend/css/bootstrap-icons.css">
 </head>
 
 <body>
