--- a/data/frontend/navigation.html
+++ b/data/frontend/navigation.html
@@ -46,6 +46,20 @@
                         <li><a class="dropdown-item" href="/cananalyzer" id="cananalyzer-link">CAN Message Analyzer</a></li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarViewControlDropdownMenuLink" role="button"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                        View & Control
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarViewControlDropdownMenuLink">
+                        <li><a class="dropdown-item" href="/scada-heating" id="scada-heating-link">Heating</a></li>
+                        <li><a class="dropdown-item" href="/scada-water" id="scada-water-link">Water</a></li>
+                        <li><a class="dropdown-item" href="/scada-aux" id="scada-aux-link">Aux</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item" id="heating-status">
+                    
+                </li>
             </ul>
         </div>
     </div>
