Undo dev-env specific setting

--- a/data/frontend/scada/heating.html
+++ b/data/frontend/scada/heating.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CERASMARTER Configuration</title>
-    <link rel="stylesheet" href="../../frontend/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../frontend/css/bootstrap-icons.css">
+    <link rel="stylesheet" href="frontend/css/bootstrap.min.css">
+    <link rel="stylesheet" href="frontend/css/bootstrap-icons.css">
 </head>
 
 <body>
@@ -69,10 +69,11 @@
                         </li>
                     </ul>
                 </div>
-                <div class="row mt-5">
+                <!-- WIP - Without function -->
+                <div class="row mt-5" hidden>
                     <h4>Modify Parameters</h4>
                 </div>
-                <div class="row mt-5">
+                <div class="row mt-5" hidden>
                     <div class="input-group mb-3 justify-content-between text-start">
                         <span class="input-group-text col-sm-9" id="enabled-label" data-bs-toggle="tooltip" data-bs-title="This will enable or disable the whole heating."><i class="bi bi-power me-2"></i>Enable</span>
                         <div class="input-group-text bg-body col justify-content-center">
