--- a/data/frontend/canbus.html
+++ b/data/frontend/canbus.html
@@ -164,6 +164,11 @@
                                     <input name="MixedCircuit.Economy" maxlength="5" type="text" class="form-control" placeholder="0x407" aria-label="Economy Flag"
                                         aria-describedby="lbl.MixedCircuit.Economy" required>
                                 </div>
+                                <div class="input-group mb-3">
+                                    <span class="input-group-text col-sm-10" id="lbl.MixedCircuit.MixValveOpen">Economy Flag</span>
+                                    <input name="MixedCircuit.MixValveOpen" maxlength="5" type="text" class="form-control" placeholder="0x441" aria-label="Mixer Valve Opening Value"
+                                        aria-describedby="lbl.MixedCircuit.MixValveOpen" required>
+                                </div>
                                 <div class="row" id="status">
                                 </div>
                                 <div class="mb-3 row">
