--- a/data/frontend/canbus.html
+++ b/data/frontend/canbus.html
@@ -165,7 +165,7 @@
                                         aria-describedby="lbl.MixedCircuit.Economy" required>
                                 </div>
                                 <div class="input-group mb-3">
-                                    <span class="input-group-text col-sm-10" id="lbl.MixedCircuit.MixValveOpen">Economy Flag</span>
+                                    <span class="input-group-text col-sm-10" id="lbl.MixedCircuit.MixValveOpen">Mixer Valve Opening</span>
                                     <input name="MixedCircuit.MixValveOpen" maxlength="5" type="text" class="form-control" placeholder="0x441" aria-label="Mixer Valve Opening Value"
                                         aria-describedby="lbl.MixedCircuit.MixValveOpen" required>
                                 </div>
